--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,75 @@
+
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
 .container {
     text-align: center;
 }
 .main-title {
     font-family: 'Courier New';
     font-size: 50px;
+    padding-top: 40px;
+    color: green;
 }
 a {
     text-decoration: none;
     font-size: 25px;
 }
-.recipes-list {
-    text-align: left;
-    list-style-position: inside;
-}
+
 .image {
     height: 300px;
     width: 300px;
+}
+
+.card {
+    height: 380px;
+    width: 300px;
+    border: 3px solid green;
+    margin-left: 50px;
+    margin-top: 50px;
+    display: inline-block;
+}
+.recipe-name {
+    height: 50px;
+    text-align: center;
+    padding: 10px;
+}
+.italian-sausages-title {
+    font-size: 20px;
+    padding-left: 10px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+}
+.recipe-image {
+    height: 200px;
+    width: 100%;
+    border-top: 3px solid green;
+}
+.img-card {
+    height: 200px;
+    width: 100%;
+    border-bottom: 3px solid green;
+}
+.recipe-description {
+    padding: 10px;
+    height: 70px;
+    border-bottom: 3px solid green;
+    text-align: center;
+    text-decoration: none;
+}
+.recipe-button a {
+    background-color: green;
+    color: white;
+    padding: 6px;
+    font-size: 20px;
+}
+.recipe-button {
+    height: 30px;
+    text-align: center;
+    padding-top: 15px;
+}
+.first {
+    margin-left: 0px;
 }
